added a way to set package version in the ValidationContext.